gst-libs/gst/vaapi/gstvaapidecoder_priv.h
@@ -275,10 +275,6 @@ gst_vaapi_decoder_push_frame (GstVaapiDecoder * decoder,
 
 G_GNUC_INTERNAL
 GstVaapiDecoderStatus
-gst_vaapi_decoder_check_status (GstVaapiDecoder * decoder);
-
-G_GNUC_INTERNAL
-GstVaapiDecoderStatus
 gst_vaapi_decoder_decode_codec_data (GstVaapiDecoder * decoder);
 
 G_END_DECLS
